# git-squash-py

./: .gitignore  README.md  create_mock_history.sh  git-squash.sh  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
git_squash/: __init__.py  __main__.py  cli.py  tool.py
git_squash/ai/: __init__.py  claude.py  interface.py  mock.py
git_squash/ai/mocks/: __init__.py
git_squash/ai/mocks/anthropic/: __init__.py  exceptions.py  types.py
git_squash/ai/mocks/claude_code_sdk/: __init__.py  _errors.py  types.py
git_squash/core/: __init__.py  analyzer.py  cache.py  config.py  types.py
git_squash/git/: __init__.py  operations.py
tests/: __init__.py  test_cache.py  test_claude.py  test_cli.py  test_integration.py  test_mocks.py  test_tool.py
