[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-squash-py"
version = "0.1.0"
description = "Intelligent git commit squashing with AI-powered summarization"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Git Squash Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities"
]
requires-python = ">=3.8"
dependencies = [
    "anthropic>=0.55.0",
    "anyio>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/your-org/git-squash-py"
Repository = "https://github.com/your-org/git-squash-py"
Issues = "https://github.com/your-org/git-squash-py/issues"

[project.scripts]
git-squash = "git_squash.cli:main"

[tool.setuptools.packages.find]
include = ["git_squash*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--tb=short -v"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]